# Nexus

./: .gitignore  Cargo.toml  README.md  build.gradle  build.rs  gradle.properties
.github/workflows/: build.yml
src/client/java/io/github/: NexusBackend.java
src/client/java/io/github/liyze09/ark/: Ark.java  NativeContext.java
src/client/java/io/github/liyze09/ark/extension/: ExtensionLoader.java  ExtensionManifest.java
src/client/java/io/github/liyze09/nexus/: Configuration.java  NexusBackend.java  NexusClientMain.java
src/client/java/io/github/liyze09/nexus/chunk/: NexusChunkBuilder.java
src/client/java/io/github/liyze09/nexus/exception/: VulkanException.java
src/client/java/io/github/liyze09/nexus/mixin/client/: ClientChunkCacheMixin.java  DMixinWindow.java  LevelRendererMixin.java  MinecraftMixin.java  MixinClientChunkCache.java
src/client/java/io/github/liyze09/nexus/render/: ExtendedWorldRender.java  ExternalImageRender.java  ExternalImageRenderer.java  NexusWorldRender.java  NexusWorldRenderer.java
src/client/java/io/github/liyze09/nexus/resource/: ExternalGlTexture.java  SharedTextureManager.java
src/client/java/io/github/liyze09/nexus/utils/: LayeredBlockGetter.java  NexusUtils.java  VkPos.java
src/client/resources/: nexus.client.mixins.json
src/main/resources/: fabric.mod.json  nexus.accesswidener  nexus.mixins.json
src/native/: backend.rs  geometry.rs  lib.rs  shader.rs  texture.rs  vulkan.rs
src/native/extension/: binding.rs  functions.rs  mod.rs  package.rs  wasm.rs
src/shaders/rasterzation/: common.glsl  rasterzation.comp
wit/: core.wit
(+11 files in other folders)
