[package]
name = "nexus"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/native/lib.rs"

[dependencies]
jni = "0.21.1"
vulkano = "0.35.2"
ash = "0.38.0"
anyhow = "1.0.100"
windows-sys = { version = "0.61.2", features = ["Win32"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
overflow-checks = false
