[package]
name = "nexus"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/native/lib.rs"

[dependencies]
jni = "0.21.1"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
ash = "0.38.0"
anyhow = "1.0.100"
smallvec = "1.15.1"
dashmap = { version = "6.1.0", features = ["rayon", "inline"] }
rand = "0.9.2"
rayon = "1.11.0"
windows-sys = { version = "0.61.2", features = ["Win32"] }
mimalloc = "0.1.48"

[build-dependencies]
walkdir = "2.5.0"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
overflow-checks = false
