[package]
name = "ark"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/native/lib.rs"

[dependencies]
vulkanalia = { version = "0.35.0", features = ["libloading", "provisional"] }
vulkanalia-vma = "0.9.0"
anyhow = "1.0.102"
rayon = "1.12.0"
mimalloc = "0.1.50"
zip = "8.6.0"
wasmtime = { version = "44.0.1"}
wasmtime-wasi = "44.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"

[build-dependencies]
shaderc = "0.10.1"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
overflow-checks = false
